# mle-template

./: .gitignore  Dockerfile  config.yaml  docker-compose.yml  docker.env  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
kafka_2.13-3.4.0/config/: server.properties
kafka_2.13-3.4.0/logs/: zookeeper-gc.log.0  zookeeper-gc.log.1  zookeeper-gc.log.2  zookeeper-gc.log.3  zookeeper-gc.log.4  zookeeper-gc.log.5  zookeeper-gc.log.6  zookeeper-gc.log.7  zookeeper-gc.log.8  zookeeper-gc.log.9
notebooks/: bikes_regression.ipynb  classification-on-iris-data.ipynb
src/: 00-dataset_to_db.py  bikes_regression.py
tests/: test_model_quality.py
