[tool.poetry]
name = "mle-template"
version = "0.1.0"
description = ""
authors = ["ARQtty <ShamovIA@yandex.ru>"]
readme = "README.md"
packages = [{include = "mle_template"}]

[tool.poetry.dependencies]
python = "^3.9"
yamlparams = "^1.0.7"
pandas = "^2.0.0"
loguru = "^0.7.0"
scikit-learn = "^1.2.2"
pytest = "^7.3.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
